--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
 matrix:
   exclude:
     - rvm: 2.0.0
-      env: PUPPET_GEM_VERSION="~> 2.7.0"
+      env: PUPPET_VERSION="2.7"
 
 env:
   - PUPPET_VERSION="2.7"
