--- a/.drone.yml
+++ b/.drone.yml
@@ -2,6 +2,12 @@ kind: pipeline
 name: default
 
 steps:
+- name: build
+  image: golang
+  commands:
+    - echo -n "Hello"
+
+steps:
 - name: docker  
   image: plugins/docker
   settings:
